--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,6 +31,21 @@ body {
     text-align: center;
     width: 78px;
   }
+
+  .reset {
+    background: rgb(49, 159, 171);
+    border: 1px solid #999;
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 39px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 78px;
+  }
   
   .card:focus {
     outline: none;
