--- a/frontend/src/components/Planning_poker.css
+++ b/frontend/src/components/Planning_poker.css
@@ -1,6 +1,8 @@
-body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
+  .main {
+    font-family: 'Crete Round', serif;
+	font-size: 20px;
+	color: #444;
+    text-align: center;
   }
   
   ol, ul {
@@ -17,7 +19,7 @@ body {
     margin-bottom: 10px;
   }
   
-  .card {
+ /*  .card {
     background: #fff;
     border: 1px solid #999;
     float: left;
@@ -30,6 +32,39 @@ body {
     padding: 0;
     text-align: center;
     width: 78px;
+  } */
+
+  .card {
+    align-items: center;
+    appearance: none;
+    background-color: #FCFCFD;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgb(45 35 66 / 40%) 0 2px 4px, rgb(45 35 66 / 30%) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #36395A;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono",monospace;
+    height: 90px;
+    width: 60px;
+    margin-right: 10px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
+    font-size: 18px;
   }
 
   .reset {
