--- a/frontend/src/components/Planning_poker.css
+++ b/frontend/src/components/Planning_poker.css
@@ -169,6 +169,32 @@
     transform: translateY(4px);
   }
 
+  .export {
+    margin-left: 10px;
+    display: inline-block;
+    padding: 10px 25px;
+    font-size: 15px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #e8dd12;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+  }
+  
+  .export:hover {background-color: #e8dd12}
+  
+  .export:active {
+    background-color: #e8dd12;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+
   .box {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
