--- a/frontend/src/components/Planning_poker.css
+++ b/frontend/src/components/Planning_poker.css
@@ -229,4 +229,10 @@
   text-align: left;
   margin-left: 30px;
 }
+
+.show-export-row {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
   
