--- a/frontend/src/components/Planning_poker.css
+++ b/frontend/src/components/Planning_poker.css
@@ -1,38 +1,24 @@
   .main {
     font-family: 'Crete Round', serif;
-	  font-size: 16px;
-	  color: #444;
+    font-size: 16px;
+    color: #444;
     text-align: center;
   }
-  
-  ol, ul {
+
+  ol,
+  ul {
     padding-left: 30px;
   }
-  
+
   .board-row:after {
     clear: both;
     content: "";
     display: table;
   }
-  
+
   .status {
     margin-bottom: 10px;
   }
-  
- /*  .card {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 78px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 78px;
-  } */
 
   .card {
     align-items: center;
@@ -45,7 +31,7 @@
     color: #36395A;
     cursor: pointer;
     display: inline-flex;
-    font-family: "JetBrains Mono",monospace;
+    font-family: "JetBrains Mono", monospace;
     height: 90px;
     width: 60px;
     margin-right: 10px;
@@ -60,19 +46,19 @@
     position: relative;
     text-align: left;
     text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
+    transition: box-shadow .15s, transform .15s;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
     white-space: nowrap;
-    will-change: box-shadow,transform;
+    will-change: box-shadow, transform;
     font-size: 18px;
   }
-  
+
   .card:focus {
     outline: none;
   }
-  
+
   .kbd-navigation .square:focus {
     background: #ddd;
   }
@@ -81,14 +67,14 @@
     text-align: center;
     flex-wrap: wrap;
   }
-  
+
   input {
     border: none;
     margin: 10px;
     background: hsl(0 0% 93%);
     border-radius: .25rem;
     padding: .75rem 1rem;
-  
+
   }
 
   .reset {
@@ -108,9 +94,11 @@
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
-  
-  .reset:hover {background-color: #C70039}
-  
+
+  .reset:hover {
+    background-color: #C70039
+  }
+
   .reset:active {
     background-color: #C70039;
     box-shadow: 0 5px #666;
@@ -134,9 +122,11 @@
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
-  
-  .confirm:hover {background-color: #3e8e41}
-  
+
+  .confirm:hover {
+    background-color: #3e8e41
+  }
+
   .confirm:active {
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
@@ -144,7 +134,6 @@
   }
 
   .show {
-    margin-left: 10px;
     display: inline-block;
     padding: 10px 25px;
     font-size: 15px;
@@ -160,9 +149,11 @@
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
-  
-  .show:hover {background-color: #383086}
-  
+
+  .show:hover {
+    background-color: #383086
+  }
+
   .show:active {
     background-color: #29298f;
     box-shadow: 0 5px #666;
@@ -186,9 +177,11 @@
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
-  
-  .export:hover {background-color: #e8dd12}
-  
+
+  .export:hover {
+    background-color: #e8dd12
+  }
+
   .export:active {
     background-color: #e8dd12;
     box-shadow: 0 5px #666;
@@ -200,39 +193,94 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px 2em;
   }
-  
+
   .box :first-child {
-      align-self: center;
+    align-self: center;
   }
 
   #line-cards-buttons {
     white-space: nowrap;
     overflow-x: auto;
     margin-top: 10px;
-}
+  }
 
-.child {
+  .child {
     display: inline-block;
-}
+  }
 
-.grid-selected {
-  text-align: center;
-  display: grid;
-  grid-template-columns: auto auto;
-}
+  .grid-selected {
+    text-align: center;
+    display: grid;
+    grid-template-columns: auto auto;
+  }
 
-.name-form {
-  margin-top: 30px;
-}
+  .name-form {
+    margin-top: 30px;
+  }
 
-.id {
-  text-align: left;
-  margin-left: 30px;
-}
+  .id {
+    text-align: left;
+    margin-left: 30px;
+  }
 
-.show-export-row {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 30px;
-}
-  
+  .show-export-row {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  .removeUserStory {
+    margin-left: 10px;
+    display: none;
+    padding: 10px 25px;
+    font-size: 10px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: #7A8FAF;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 9px #999;
+  }
+
+  .removeUserStory:hover {
+    background-color: #6B798E
+  }
+
+  .removeUserStory:active {
+    background-color: #6B798E;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+
+  .nav-link-AddUserStory {
+    margin-left: 10px;
+    display: inline-block;
+    padding: 10px 25px;
+    font-size: 10px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: #7A8FAF;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 9px #999;
+  }
+
+  .nav-link-AddUserStory:hover {
+    background-color: #6B798E
+  }
+
+  .nav-link-AddUserStory:active {
+    background-color: #6B798E;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
