--- a/frontend/src/components/Planning_poker/Planning_poker.css
+++ b/frontend/src/components/Planning_poker/Planning_poker.css
@@ -18,21 +18,6 @@
   .status {
     margin-bottom: 10px;
   }
-  
- /*  .card {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 78px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 78px;
-  } */
 
   .card {
     align-items: center;
@@ -70,7 +55,17 @@
   }
   
   .card:focus {
-    outline: none;
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  }
+
+  .card:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+  }
+  
+  .card:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
   }
   
   .kbd-navigation .square:focus {
