--- a/frontend/src/components/Planning_poker.css
+++ b/frontend/src/components/Planning_poker.css
@@ -231,3 +231,59 @@
   margin-bottom: 30px;
 }
   
+
+.removeUserStory {
+  margin-left: 10px;
+  display: none;
+  padding: 10px 25px;
+  font-size: 10px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background-color: #7A8FAF;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 9px #999;
+}
+
+.removeUserStory:hover {
+  background-color: #6B798E
+}
+
+.removeUserStory:active {
+  background-color: #6B798E;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.nav-link-AddUserStory {
+  margin-left: 10px;
+  display: inline-block;
+  padding: 10px 25px;
+    font-size: 10px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: #7A8FAF;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 9px #999;
+}
+
+.nav-link-AddUserStory:hover {
+  background-color: #6B798E
+}
+
+.nav-link-AddUserStory:active {
+  background-color: #6B798E;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+} 
