Change display Planning-poker

--- a/frontend/src/components/Planning_poker/Planning_poker.css
+++ b/frontend/src/components/Planning_poker/Planning_poker.css
@@ -1,6 +1,6 @@
   .main {
     font-family: 'Crete Round', serif;
-    font-size: 16px;
+    font-size: 12px;
     color: #444;
     text-align: center;
   }
@@ -16,9 +16,8 @@
     display: table;
   }
 
-  .status {
-    margin-bottom: 10px;
-  }
+#selected-card {
+}
 
   .card {
     align-items: center;
@@ -224,10 +223,6 @@
     grid-template-columns: auto auto;
   }
 
-  .name-form {
-    margin-top: 30px;
-  }
-
   .id {
     text-align: left;
     margin-left: 30px;
@@ -285,6 +280,7 @@
 .id {
   text-align: left;
   margin-left: 30px;
+  font-size: 16px;
 }
 
 .show-export-row {
@@ -350,3 +346,43 @@
   transform: translateY(4px);
 } 
 
+.userStory {
+  margin: 30px 10px 10px 10px;
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Neucha, sans-serif;
+  font-size: 1rem;
+  line-height: 23px;
+  outline: none;
+  padding: .75rem;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.userStory:hover {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+  transform: translate3d(0, 2px, 0);
+}
+
+.userStory:focus {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
