--- a/frontend/src/components/History/History.css
+++ b/frontend/src/components/History/History.css
@@ -8,8 +8,9 @@
     width: 100%;
     height: 50vh;
     font-family: 'Crete Round', serif;
-    font-size: 16px;
+    font-size: 13px;
     color: #444;
+    display: block;
   }
   
   .historyItem_post {
@@ -31,12 +32,10 @@
     margin: 0 0 0.5rem 0;
     font-family: 'Crete Round', serif;
     color: #999;
-    font-size: 1.25rem;
   }
   
-  h1 {
+  h2 {
     margin: 2rem 2rem 0 2rem;
-    font-size: 2.5rem;
     letter-spacing: 0.5px;
     font-family: 'Crete Round', serif;
     color: #333;
@@ -50,7 +49,7 @@
   }
   
   
-  .card {
+  .card-vote {
     align-items: center;
     appearance: none;
     background-color: #FCFCFD;
@@ -59,7 +58,6 @@
     box-shadow: rgb(45 35 66 / 40%) 0 2px 4px, rgb(45 35 66 / 30%) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
     box-sizing: border-box;
     color: #36395A;
-    cursor: pointer;
     display: inline-flex;
     font-family: "JetBrains Mono", monospace;
     height: 90px;
